--- a/client/main.css
+++ b/client/main.css
@@ -18,13 +18,6 @@ body {
   font-weight: bolder;
 }
 
-.container {
-  max-width: 75vw;
-  margin: 0 auto;
-  min-height: 100%;
-  background: white;
-}
-
 header {
   background: #d2edf4;
   background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
@@ -47,13 +40,9 @@ form {
   position: relative;
 }
 
-.new-task input:focus{
-  outline: 0;
-}
-
 ul {
   font-size:  5vh;
-  display: inline-block;
+  display: block;
 }
 
 li {
@@ -71,7 +60,7 @@ li:hover {
   box-shadow: 0.8vw 0.8vh;
 }
 
-li .text {
+li.text {
   font-size: 1.5vh;
 }
 
@@ -79,16 +68,17 @@ li:active{
   box-shadow: 0.5vw 0.5vh;
 }
 
-.sub-container{
-  padding-left:  2vw;
+img{
+  cursor: pointer;
+  opacity: 0.9;
 }
 
-.submission{
-  padding: 2vw 0px 2vw 0px;
+img:hover {
+  opacity: 1;
 }
 
-.courses{
-  font-size: 10vh;
+img:active{
+  opacity: 0.5;
 }
 
 form{
@@ -127,4 +117,53 @@ button{
 
 button:active{
   opacity: 0.6;
+}
+
+img{
+  max-width:100%;
+  max-height:100%;
+}
+
+input{
+  width:  60vw;
+  font-size:  3vh;
+}
+
+.container {
+  max-width: 75vw;
+  margin: 0 auto;
+  min-height: 100%;
+  background: white;
+}
+
+.courses{
+  font-size: 10vh;
+  display: block;
+}
+
+.helper{
+  display: block;
+}
+
+.sub-container{
+  padding-left:  2vw;
+  display: block;
+}
+
+.submission{
+  padding: 2vw 0px 2vw 0px;
+  display: block;
+}
+
+.example{
+  display: block;
+  background-color: #e5edf9;
+  padding:  10px;
+  margin: 5px;
+}
+
+.smallIcons{
+  margin-left: 2vw;
+  length: 3vh;
+  width: 3vw;
 }
