--- a/client/main.css
+++ b/client/main.css
@@ -155,3 +155,27 @@ input{
   margin-right: 0.3em;
   width: 1em;
 }
+
+.background{
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  height: 100vh;
+  width:  100vw;
+  margin: 0;
+  background-color: BLACK;
+}
+
+.displayCenter{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-size: 2em;
+  color: white;
+}
+
+.link{
+  color: white;
+}
